Fixes spacing at bottom of all post pages

--- a/app/_scss/pages/_base.scss
+++ b/app/_scss/pages/_base.scss
@@ -47,6 +47,7 @@
 				background-size: 100% auto;
 				width: 100%; height: 100%;
 				position: absolute;
+				margin: 0;
 			}
 		}
 	}
